# document-translation

./: .gitignore  .gitmodules  README.md  align.py  batch_request.py  escape_tool.py  okf_xml@fraus.fprm  pyproject.toml  requirements.txt  run_pipeline.sh  run_pipeline_csuk.sh  run_pipeline_csuk_fraus.sh  run_pipeline_csuk_generic.sh  test_translate_markup.py  translate-lindat.sh  translate.py  translate_markup.py  translate_pdf.py
document_translation/: alignedsegments.py  alignment.py  markuptranslator.py  regextokenizer.py  segmentedtext.py  tagreinserter.py
document_translation/cli/: translate_markup.py  translate_pdf.py
document_translation/lindat_services/: align.py  batch_request.py  translate.py
document_translation/pdf_tools/: pdfeditor.py
examples/fraus/: fix_fraus_xml_encoding.py  unescape_fraus.py
examples/pdf/: README.md
examples/simple/: README.md  moses_inlinetext.cs  moses_inlinetext.en
examples/word_document/: README.md  run_pipeline.sh  test_document.docx
examples/word_document/output/: test_document.cs.docx  test_document.docx.lines.cs  test_document.docx.lines.en
lindat_services/: align.py  batch_request.py
markuptranslator/: alignedsegments.py  alignment.py  markuptranslator.py  segmentedtext.py  tagreinserter.py
tests/: test_translate_markup.py
